pequeñas modificaciones en style - contacto -degustaciones

--- a/contacto.html
+++ b/contacto.html
@@ -9,6 +9,9 @@
     <title>VINOS- CONTACTO</title>
 </head>
 <body>
+    
+    <div class="contenedorGeneral">
+
   
         <header class="header">
             <h1 class="titulo"><a href="./index.html">VINOS</a></h1>
@@ -70,6 +73,7 @@
         </div>
 
     </footer>
+    </div>
     
 </body>
 </html>
