--- a/degustaciones.html
+++ b/degustaciones.html
@@ -12,6 +12,9 @@
 
 <body>
 
+    <div class="contenedorGeneral">
+    
+
     <header class="header">
         <h1 class="titulo"><a href="./index.html">VINOS</a></h1>
         <nav class="navBar">
@@ -90,6 +93,7 @@
         </div>
 
     </footer>
+    </div>
 
 
 </body>
