agregué un banner y modifiqué las imagenes de los productos destacados, agregandoles un efecto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>VINOS - INICIO</title>
 </head>
 <body>
-     <div class="contenedorGeneral">
+    <div class="contenedorGeneral">
     
     <header class="header">
         <h1 class="titulo"><a href="./index.html">VINOS</a></h1>
@@ -37,6 +37,11 @@
     </header>
 
     <main class="main"> 
+
+        <div class="bannerPrincipal">
+            <img src="./imagenes/tim-mossholder-V0UvHFGSFGI-unsplash.jpg" alt="banner" class="imgBanner">
+        </div>
+
         <div class="presentacion">
 
         <section class="bannerIndex">
