agregué un div para luego agregar un fondo

--- a/contacto.html
+++ b/contacto.html
@@ -39,6 +39,10 @@
         </header>
 
     <main>
+
+        <div class="fondoForm">
+        </div>
+
         <div class="formulario">
         <form class="cajaForm" action="#" method="get">
             <label>Nombre y Apellido</label>
